--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Chat App</title>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
 </head>
 
 
 <script src="/socket.io/socket.io.js"></script>
+
 <script src="/js/index.js"></script>
 
 <body>
   <p>Welcome to the chat app</p>
+
+  <ol id="messages"></ol>
+
+  <form id="message-form">
+    <input name="message" type="text" placeholder="Message here" />
+
+    <button>Send</button>
+  </form>
 </body>
 
 </html>
