--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <title>Chat App</title>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
+  <link href="/css/styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 
@@ -15,17 +16,30 @@
 
 <script src="/js/index.js"></script>
 
-<body>
-  <p>Welcome to the chat app</p>
+<body class="chat">
+  <div class="chat__sidebar">
+    <h3>People</h3>
+    <div id="users"></div>
+  </div>
 
-  <ol id="messages"></ol>
+  <div class="chat__main">
 
-  <form id="message-form">
-    <input name="message" type="text" placeholder="Message here" />
+    <ol id="messages" class="chat__messages"></ol>
 
-    <button>Send</button>
-  </form>
-  <button id="send-location">Send Location</button>
+    <div class="chat__footer">
+      <form id="message-form">
+        <input name="message" type="text" placeholder="Message here" autofocus autocomplete="off" />
+
+        <button>Send</button>
+      </form>
+      <button id="send-location">Send Location</button>
+
+    </div>
+
+
+  </div>
+
+
 </body>
 
 </html>
